changed animation call and timings, fixed layout issue with temp_unit buttons, improved background-image handling

--- a/styles.css
+++ b/styles.css
@@ -6,14 +6,12 @@
 
 html {
   height: 100vh;
-
-  background: url(img/background_cloudy.jpg) no-repeat fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: left top;
+  background: url(img/background_cloudy.jpg) no-repeat;
+  -webkit-background-size: 1000px 1000px;
+  -moz-background-size: 1000px 1000px;
+  -o-background-size: 1000px 1000px;
+  background-size: 1000px 1000px;
+  background-position: 67% 50%;
 }
 
 body {
@@ -123,7 +121,7 @@ button {
   left: 0;
   right: 0;
   transform: translate(0, 0);
-  animation: turn 0.8s ease-in-out 1;
+  animation: turn 0.8s ease-in-out;
   transform: rotate(-140deg);
 }
 @keyframes turn {
@@ -243,26 +241,23 @@ button {
 
 #forecast-container {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
   align-items: center;
-  width: 100%;
   background-color: #ffffff00;
-  overflow: hidden;
+  overflow: scroll;
 }
 .forecast {
-  width: 20%;
+  width: 25%;
   height: 100%;
   background-color: #697b9659;
+  flex: 0 0 auto;
 }
 
 .temp_unit_class {
   vertical-align: -webkit-baseline-middle;
-  padding: 5px 5px;
   background-color: #163516;
   width: 40px;
-  height: 40px;
-  line-height: 40px;
+  height: 48px;
+  line-height: 48px;
   text-align: center;
 }
 
